added login route

--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
 MONGO_URI=mongodb+srv://phine:hydrocarbons@cluster0.dcvz347.mongodb.net/HouseHub?retryWrites=true&w=majority
+
+
+JWT_SECRET=G+KbPeShVmYp3s6v9y$B&E)H@McQfTjW
+JWT_LIFETIME=30d
