--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mongoose": "^5.13.2",
     "multer": "^1.4.5-lts.1",
     "rate-limiter": "^0.2.0",
+    "sharp": "^0.30.7",
     "swagger-ui-express": "^4.1.6",
     "xss-clean": "^0.1.1",
     "yamljs": "^0.3.0"
