--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
-MONGO_URI=mongodb+srv://phine:hydrocarbons@cluster0.dcvz347.mongodb.net/HouseHub?retryWrites=true&w=majority
-
+MONGO_URI=mongodb+srv://phinehas:hydrocarbons@cluster0.f4hulk9.mongodb.net/Househub?retryWrites=true&w=majority
 
 JWT_SECRET=G+KbPeShVmYp3s6v9y$B&E)H@McQfTjW
-JWT_LIFETIME=30d
+JWT_REFRESH_SECRET=*F-JaNdRgUjXn2r5u8x/A?D(G+KbPeShVmYp3s6v9y$B&E)H@McQfTjWnZr4t7w!
+JWT_LIFETIME=15d
+JWT_REFRESH_LIFETIME=30d
