--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "househub",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
+    "client-install": "npm install --prefix client",
     "start": "nodemon app.js"
   },
   "author": "",
@@ -11,6 +12,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
