handled refresh tokens

--- a/.env
+++ b/.env
@@ -2,5 +2,5 @@ MONGO_URI=mongodb+srv://phinehas:hydrocarbons@cluster0.f4hulk9.mongodb.net/House
 
 JWT_SECRET=G+KbPeShVmYp3s6v9y$B&E)H@McQfTjW
 JWT_REFRESH_SECRET=*F-JaNdRgUjXn2r5u8x/A?D(G+KbPeShVmYp3s6v9y$B&E)H@McQfTjWnZr4t7w!
-JWT_LIFETIME=15d
-JWT_REFRESH_LIFETIME=30d
+JWT_LIFETIME=15m
+JWT_REFRESH_LIFETIME=1d
