--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
+# MONGO_URI=mongodb+srv://phinehas:hydrocarbons@cluster0.f4hulk9.mongodb.net/Househub?retryWrites=true&w=majority
 MONGO_URI=mongodb+srv://phinehas:hydrocarbons@cluster0.f4hulk9.mongodb.net/Househub?retryWrites=true&w=majority
 
 JWT_SECRET=G+KbPeShVmYp3s6v9y$B&E)H@McQfTjW
 JWT_REFRESH_SECRET=*F-JaNdRgUjXn2r5u8x/A?D(G+KbPeShVmYp3s6v9y$B&E)H@McQfTjWnZr4t7w!
-JWT_LIFETIME=15m
+JWT_LIFETIME=1d
 JWT_REFRESH_LIFETIME=1d
