--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "multer": "^1.4.5-lts.1",
     "rate-limiter": "^0.2.0",
     "sharp": "^0.31.2",
+    "socket.io": "^4.5.4",
     "swagger-ui-express": "^4.6.0",
     "xss-clean": "^0.1.1",
     "yamljs": "^0.3.0"
